# beni-tui

./: .gitignore  Cargo.toml  config.yaml
src/: beni_cli.rs  benifex.rs  logging.rs  main.rs  tui.rs
src/beni_cli/: client.rs  config.rs  mod.rs  parser.rs
src/benifex/: discount_parser.rs  discount_response.rs  discount_view.rs
src/tui/: app.rs  mod.rs  ui.rs
src/tui/components/: category_list.rs  cookie_input.rs  discount_details.rs  discount_list.rs  mod.rs
